--- a/views/login.pug
+++ b/views/login.pug
@@ -6,7 +6,7 @@ block content
   form(action="#" name="login" method="GET" onsubmit="return pushLogin();")
     input(name="userName")
     br
-    input(name="password")
+    input(name="password" type="password")
     button(type="submit")="ログイン"
     
 
